...
        super.viewDidLoad()
        scrollView.delegate = self
        scrollView.minimumZoomScale = 0.1
        scrollView.maximumZoomScale = 1.25
        
        imageView.translatesAutoresizingMaskIntoConstraints = true
        backButton.accessibilityIdentifier = "BackButton"
    }
        
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)

        if !hasLoadedImage {
...
